POC: Add Flickr sdk

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        buildConfigField "String", "FLICKR_API_KEY", "$project.FLICKR_API_KEY"
+        buildConfigField "String", "FLICKR_API_SECRET", "$project.FLICKR_API_SECRET"
+
     }
 
     buildTypes {
@@ -59,4 +63,8 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+//    Flickr
+    implementation "com.googlecode.flickrj-android:flickrj-android:2.1.0"
+    implementation files('libs/slf4j-android-1.6.1-RC1.jar')
 }
