--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,11 @@ dependencies {
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
 
+//    Nav Compose
     def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-compose:$nav_version"
+
+//    Coil
+    implementation "io.coil-kt:coil-compose:2.0.0-rc01"
 
 }
